groups/flowDefinitions/objects/User.object
<CustomObject>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_ID_Shopping__c</fullName>
        <label>Id Shopping</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Regional__c</fullName>
        <label>Regional</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TW1_Loja_Centro_Oeste_Norte_1</fullName>
                </value>
                <value>
                    <fullName>TW1_Loja_Nordeste</fullName>
                </value>
                <value>
                    <fullName>TW1_Loja_Rio_de_Janeiro</fullName>
                </value>
                <value>
                    <fullName>TW1_Loja_Sao_Paulo</fullName>
                </value>
                <value>
                    <fullName>TW1_Loja_Centro_Oeste_Norte_2</fullName>
                </value>
                <value>
                    <fullName>TW1_Conta_corporativa</fullName>
                </value>
                <value>
                    <fullName>TW1_Mall_Midia_Rio_de_Janeiro_1</fullName>
                </value>
                <value>
                    <fullName>TW1_Mall_Midia_Rio_de_Janeiro_2</fullName>
                </value>
                <value>
                    <fullName>TW1_Mall_Midia_Sao_Paulo_1</fullName>
                </value>
                <value>
                    <fullName>TW1_Mall_Midia_Sao_Paulo_2</fullName>
                </value>
                <value>
                    <fullName>TW1_Mall_Mídia_Centro_Oeste_Norte</fullName>
                </value>
                <value>
                    <fullName>TW1_Mall_Midia_Sul</fullName>
                </value>
                <value>
                    <fullName>TW1_Mall_Midia_Nordeste</fullName>
                </value>
                <value>
                    <fullName>TW1_Trade_Midia</fullName>
                </value>
                <value>
                    <fullName>Centro-Oeste e Norte</fullName>
                    <isActive>false</isActive>
                    <label>Centro-Oeste e Norte</label>
                </value>
                <value>
                    <fullName>Nordeste</fullName>
                    <isActive>false</isActive>
                    <label>Nordeste</label>
                </value>
                <value>
                    <fullName>Rio de Janeiro</fullName>
                    <isActive>false</isActive>
                    <label>Rio de Janeiro</label>
                </value>
                <value>
                    <fullName>Sul</fullName>
                    <isActive>false</isActive>
                    <label>Sul</label>
                </value>
                <value>
                    <fullName>São Paulo</fullName>
                    <isActive>false</isActive>
                    <label>São Paulo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <label>Shopping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NORTH SHOPPING JOQUEI</fullName>
                </value>
                <value>
                    <fullName>NORTH SHOPPING FORTALEZA</fullName>
                </value>
                <value>
                    <fullName>VIA SUL SHOPPING</fullName>
                </value>
                <value>
                    <fullName>NORTH SHOPPING MARACANAU</fullName>
                </value>
                <value>
                    <fullName>SHOPPING CONJUNTO NACIONAL</fullName>
                </value>
                <value>
                    <fullName>PANTANAL SHOPPING</fullName>
                </value>
                <value>
                    <fullName>SHOPPING NOVA IGUAÇU</fullName>
                </value>
                <value>
                    <fullName>RIO DESIGN LEBLON</fullName>
                </value>
                <value>
                    <fullName>RIO DESIGN BARRA</fullName>
                </value>
                <value>
                    <fullName>SHOPPING NOVA AMERICA</fullName>
                </value>
                <value>
                    <fullName>BOTAFOGO PRAIA SHOPPING</fullName>
                </value>
                <value>
                    <fullName>DOWNTOWN</fullName>
                </value>
                <value>
                    <fullName>BOULEVARD RIO SHOPPING</fullName>
                </value>
                <value>
                    <fullName>ANCAR</fullName>
                </value>
                <value>
                    <fullName>NATAL SHOPPING</fullName>
                </value>
                <value>
                    <fullName>PORTO VELHO SHOPPING</fullName>
                </value>
                <value>
                    <fullName>SHOPPING PARQUE DAS BANDEIRAS</fullName>
                </value>
                <value>
                    <fullName>GOLDEN SQUARE SHOPPING</fullName>
                </value>
                <value>
                    <fullName>CENTERVALE SHOPPING</fullName>
                </value>
                <value>
                    <fullName>SHOPPING ELDORADO</fullName>
                </value>
                <value>
                    <fullName>SHOPPING METRO ITAQUERA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Unique__c</fullName>
        <description>Field is used to generate unique user counts on various reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Unique</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Usuários ativos</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsersapagar</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Atendente</value>
        </filters>
        <label>Usuários apagar</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Todos os usuários</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Atendimento</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>atendimento</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Atendentes Ativos</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>LojaNordeste</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Loja Nordeste Usuário de Parceiro</value>
        </filters>
        <label>Loja Nordeste</label>
        <language>pt_BR</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>